--- a/source/less/cagov/global-footer.less
+++ b/source/less/cagov/global-footer.less
@@ -1,6 +1,10 @@
 /* -----------------------------------------
    FOOTER - /source/less/cagov/global-footer.less
 ----------------------------------------- */
+// keeps footer on the bottom of the page
+#main-content {
+  min-height: calc(100vh - 90px);
+}
 
 .global-footer {
     .link-variant(@gray-lightest; @color-p1; none; underline);
