--- a/css/colorscheme-oceanside.css
+++ b/css/colorscheme-oceanside.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Oct-26-2017 */
+/* cagov-template-v5 - v0.0.1 - Apr-06-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
  Helper Mixins for service-group
@@ -205,12 +205,11 @@ h1 span[class^="ca-gov-icon-"]:first-child {
   border-color: #bdbdbd;
 }
 .search-container.featured-search {
-  background: #777777;
-  background: rgba(0, 0, 0, 0.65);
+  background: none;
 }
 .search-container.featured-search:hover,
 .search-container.featured-search:focus {
-  background-color: rgba(0, 0, 0, 0.8);
+  background: none;
 }
 .search-container.featured-search.active {
   background: #d6d6d6;
