--- a/source/less/colorscheme/cs-search.less
+++ b/source/less/colorscheme/cs-search.less
@@ -53,14 +53,15 @@
 }
 
 .search-container.featured-search {
-    background: @gray-light;            // fallback color
-    .rgba (#000, .65);                   // rgba function
-    background: @rgba;                  // rgba value for modern browsers
+    background:none;           // fallback color
+    //.rgba (#000, .65);                   // rgba function
+    // background: @rgba;                  // rgba value for modern browsers
 
     // Darken the search container on hover
     &:hover, &:focus {
-        .rgba (#000, .8);              // rgba function
-        background-color: @rgba;        // rgba value for modern browsers
+		background:none;
+		// .rgba (#000, .8);              // rgba function
+        // background-color: @rgba;        // rgba value for modern browsers
     }
 
     &.active {
