Fixed custom google search x clear button on focus state

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Apr-06-2018 */
+/* cagov-template-v5 - v0.0.1 - Apr-18-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -6549,6 +6549,10 @@ table.gsc-search-box td {
 }
 .search-container.active div.gsc-clear-button {
   width: 40px;
+}
+.gsc-input-box table td:nth-child(2),
+.gsib_b {
+  display: none !important;
 }
 /* -----------------------------------------
    SITE SEARCH RESULTS - /source/less/cagov/search-results.less
