Fixed custom google search x clear button on focus state in source .less file

--- a/source/less/cagov/search.less
+++ b/source/less/cagov/search.less
@@ -632,3 +632,6 @@ table.gsc-search-box td {
 .search-container.active div.gsc-clear-button {
   width: 40px;
 }
+.gsc-input-box table td:nth-child(2), .gsib_b {
+  display: none !important;
+}
