--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -6143,13 +6143,16 @@ h6,
 .gsc-control-cse {
   padding: 0 !important;
 }
+.search-container.active {
+    background: #d6d6d6 !important;
+}
 /* Large Search Animation and Styling */
 @media (min-width: 768px) {
   .featured-search {
     display: block;
     position: absolute;
     top: 240px;
-    padding: 0;
+    padding: 10px;
     max-height: 100%;
     border-radius: 0;
     min-height: 55px;
@@ -6157,6 +6160,7 @@ h6,
     left: 20%;
     -webkit-transition: all 0.4s;
     transition: all 0.4s;
+		background-color: rgba(0, 0, 0, 0.65) !important
   }
   .flexbox .featured-search {
     left: 0px;
@@ -6434,13 +6438,8 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   margin-bottom: 0;
 }
 .gsc-control-searchbox-only table.gsc-search-box td.gsc-input {
-  padding-right: 0 !important;
-  width: 100% !important;
-}
-.gsc-control-searchbox-only .gsc-input-box {
-  border: none !important;
-  background: transparent !important;
-  height: 100%;
+  padding-right: 0;
+  width: 100% ;
 }
 .gsc-control-searchbox-only input.gsc-input {
   background-color: rgba(255, 255, 255, 0.8);
@@ -6453,17 +6452,29 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   padding: 14px !important;
   opacity: 0.8 !important;
   width: 100%;
-  background-position-x: 7px !important;
 }
 .gsc-control-searchbox-only input.gsc-search-button,
 .gsc-control-searchbox-only button.gsc-search-button {
-  opacity: 0;
-  width: 55px;
-  height: 51px;
+	padding: 5px 5px 0 0;
+	background-image: none;
+	background-color: transparent;
+	border: 0;
   position: absolute;
   right: 2px;
   top: 2px;
   z-index: 55;
+}
+.search-container.active .gsc-control-searchbox-only input.gsc-search-button, .search-container.active .gsc-control-searchbox-only button.gsc-search-button{
+	padding-top: 15px;
+}
+.cse .gsc-search-button-v2:focus, .gsc-search-button-v2:focus{
+	box-shadow: none !important;
+}
+.gsc-control-searchbox-only button.gsc-search-button.gsc-search-button-v2 svg{
+	fill: #666;
+	height: 40px;
+	width: 40px;
+	
 }
 .gsc-control-searchbox-only td.gsc-clear-button {
   width: 1px !important;
@@ -6472,6 +6483,7 @@ GOOGLE CUSTOM SEARCH CUSTOMIZATION OVERRIDES
   padding-right: 0 !important;
   padding-left: 0 !important;
   position: relative;
+	display: block;
 }
 .gsc-control-searchbox-only td.gsc-search-button {
   width: 0px !important;
