Changed body background from light grey to white.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Apr-18-2018 */
+/* cagov-template-v5 - v0.0.1 - Apr-23-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -207,7 +207,7 @@ body {
   font-size: 1em;
   line-height: 1.42857143;
   color: #333333;
-  background-color: #efefef;
+  background-color: #fff;
 }
 input,
 button,
@@ -7402,7 +7402,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 .main-navigation .mobile-controls {
   text-align: left;
-  background-color: #efefef;
+  background-color: #fff;
 }
 .mobile-control.toggle-sub-nav {
   position: absolute;
