--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -48,7 +48,7 @@
 //## Settings for some of the most global styles.
 
 //-- Background color for `<body>`.
-@body-bg:               #efefef;
+@body-bg:               #fff;
 //-- Global text color on `<body>`.
 @text-color:            @gray-dark;
 
