--- a/source/scss/cagov/sections.scss
+++ b/source/scss/cagov/sections.scss
@@ -63,3 +63,14 @@
 .two {		
 	width:307px;			
 }	
+
+// pre tag State Template styles
+pre {
+	word-break: break-all;
+	word-wrap: break-word;
+	background-color: $gray-lightest;
+	border: 1px solid $gray-lighter;
+	padding:$spacer
+	}
+
+
