--- a/source/scss/cagov/spacing.scss
+++ b/source/scss/cagov/spacing.scss
@@ -124,3 +124,7 @@
 .bottom-n {bottom:($spacer);}
 .bottom-md {bottom:($spacer * 1.5);}
 .bottom-lg {bottom:($spacer * 3);}
+
+// Backwards compatibility (bootstrap3 leftovers)
+.pull-right {float: right !important;}
+.pull-left {float: left !important;}
