--- a/source/scss/cagov/testimonials.scss
+++ b/source/scss/cagov/testimonials.scss
@@ -30,7 +30,7 @@
         padding-left: 10px;
     }
     
-    .thumbnail-left, .testimonial > .pull-left {
+    .thumbnail-left, .testimonial > .float-left {
         display: table-cell;
         padding-right: 10px;
     }
