--- a/source/scss/cagov/type.scss
+++ b/source/scss/cagov/type.scss
@@ -78,3 +78,9 @@ h6, .h6 { @include font-size(.87);  margin-top: 1.67em; margin-bottom: 1.3em;}
         @include font-size(3.5);
     }
 }
+.serif {
+    font-family:$font-family-serif !important;
+}
+.monospace {
+    font-family:$font-family-monospace !important;
+}
