--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -47,7 +47,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @-ms-viewport {
@@ -8734,6 +8734,14 @@ h6, .h6 {
   font-size: 3.5rem;
 }
 
+.serif {
+  font-family: "Merriweather", serif !important;
+}
+
+.monospace {
+  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
+}
+
 /* -----------------------------------------
    SOCIAL SHARE WIDGET
    /source/scss/cagov/socialsharer.scss
@@ -12642,7 +12650,7 @@ body {
   text-decoration: none;
   background: transparent url("../images/fancybox/blank.gif");
   /* helps IE */
-  -webkit-tap-highlight-color: transparent;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   z-index: 8040;
   outline: 0 !important;
 }
@@ -14162,11 +14170,11 @@ hr.hr-light {
   font-size: 0.9rem;
   margin: 0 30px .2em 0;
   padding: 4px 35px 2px 10px;
-  background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, transparent 100%);
-  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, transparent 100%);
-  background: -o-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, transparent 100%);
-  background: -ms-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, transparent 100%);
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.1) 0%, transparent 100%);
+  background: -moz-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -o-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: -ms-linear-gradient(left, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#20000000',endColorStr='#00000000', GradientType='1');
 }
 
