Added typography page to the sample directory.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - Apr-23-2018 */
+/* cagov-template-v5 - v0.0.1 - May-23-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -5192,6 +5192,12 @@ h6,
 [class*="icon-"].biggest {
   font-size: 56px;
   font-size: 3.5rem;
+}
+.serif {
+  font-family: "Merriweather", serif !important;
+}
+.monospace {
+  font-family: Menlo, Monaco, Consolas, "Courier New", monospace !important;
 }
 /* -----------------------------------------
    SOCIAL SHARE WIDGET
