--- a/source/less/cagov/type.less
+++ b/source/less/cagov/type.less
@@ -70,3 +70,10 @@ h6, .h6 { .font-size(.87); }
         .font-size(3.5);
     }
 }
+
+.serif {
+    font-family:@font-family-serif !important;
+}
+.monospace {
+    font-family:@font-family-monospace !important;
+}
