Updated severe alert close button style

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,4 +1,4 @@
-/* cagov-template-v5 - v0.0.1 - May-23-2018 */
+/* cagov-template-v5 - v0.0.1 - Aug-09-2018 */
 /* STYLES COMPILED FROM SOURCE (LESS) DO NOT MODIFY */
 /* -----------------------------------------
    NORMALIZE - /source/less/bootstrap/normalize.less
@@ -9350,6 +9350,11 @@ body {
 }
 .alert-severe .close {
   color: #000;
+  position: relative;
+  top: 0;
+  right: -5px;
+  padding: 0 10px;
+  text-shadow: none;
 }
 .alert-severe .alert-level {
   color: #000;
