--- a/source/less/cagov/alert-banner.less
+++ b/source/less/cagov/alert-banner.less
@@ -40,9 +40,14 @@
 
 .alert-severe {
     background: @brand-highlight;
-    
+
     .close {
         color: @gray-base;
+        position: relative;
+        top: 0;
+        right: -5px;
+        padding: 0 10px;
+        text-shadow: none;
     }
 
     .alert-level {
@@ -52,8 +57,8 @@
     }
 
     .alert-text {
-      color: @gray-base;
-      .rgba (contrast(@brand-highlight), .15);
+        color: @gray-base;
+        .rgba (contrast(@brand-highlight), .15);
     }
 }
 
