--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -12288,24 +12288,32 @@ body {
    OWL CAROUSEL
    /source/scss/libs/carousel.scss
 ----------------------------------------- */
-/*
- *  Core Owl Carousel CSS File
- 
+/**
+ * Owl Carousel v2.3.4
+ * Copyright 2013-2018 David Deutsch
+ * Licensed under: SEE LICENSE IN https://github.com/OwlCarousel2/OwlCarousel2/blob/master/LICENSE
  */
-.carousel {
+/*
+ *  Owl Carousel - Core
+ */
+.owl-carousel {
   display: none;
   width: 100%;
   -webkit-tap-highlight-color: transparent;
   /* position relative and z-index fix webkit rendering fonts issue */
   position: relative;
+  z-index: 1;
 }
 
-.carousel .owl-stage {
+.owl-carousel .owl-stage {
   position: relative;
   -ms-touch-action: pan-Y;
+  touch-action: manipulation;
+  -moz-backface-visibility: hidden;
+  /* fix firefox animation glitch */
 }
 
-.carousel .owl-stage:after {
+.owl-carousel .owl-stage:after {
   content: ".";
   display: block;
   clear: both;
@@ -12314,14 +12322,24 @@ body {
   height: 0;
 }
 
-.carousel .owl-stage-outer {
+.owl-carousel .owl-stage-outer {
   position: relative;
   overflow: hidden;
   /* fix for flashing background */
   -webkit-transform: translate3d(0px, 0px, 0px);
 }
 
-.carousel .owl-item {
+.owl-carousel .owl-wrapper,
+.owl-carousel .owl-item {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+}
+
+.owl-carousel .owl-item {
   position: relative;
   min-height: 1px;
   float: left;
@@ -12330,22 +12348,20 @@ body {
   -webkit-touch-callout: none;
 }
 
-.carousel .owl-item img {
+.owl-carousel .owl-item img {
   display: block;
   width: 100%;
-  -webkit-transform-style: preserve-3d;
 }
 
-.carousel .owl-nav.disabled,
-.carousel .owl-dots.disabled {
+.owl-carousel .owl-nav.disabled,
+.owl-carousel .owl-dots.disabled {
   display: none;
 }
 
-.carousel .owl-nav .owl-prev,
-.carousel .owl-nav .owl-next,
-.carousel .owl-dot {
+.owl-carousel .owl-nav .owl-prev,
+.owl-carousel .owl-nav .owl-next,
+.owl-carousel .owl-dot {
   cursor: pointer;
-  cursor: hand;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
@@ -12353,98 +12369,78 @@ body {
   user-select: none;
 }
 
-.carousel.owl-loaded {
+.owl-carousel .owl-nav button.owl-prev,
+.owl-carousel .owl-nav button.owl-next,
+.owl-carousel button.owl-dot {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+}
+
+.owl-carousel.owl-loaded {
   display: block;
 }
 
-.carousel.owl-loading {
+.owl-carousel.owl-loading {
   opacity: 0;
   display: block;
 }
 
-.carousel.owl-hidden {
+.owl-carousel.owl-hidden {
   opacity: 0;
 }
 
-.carousel.owl-refresh .owl-item {
-  display: none;
+.owl-carousel.owl-refresh .owl-item {
+  visibility: hidden;
 }
 
-.carousel.owl-drag .owl-item {
+.owl-carousel.owl-drag .owl-item {
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
 }
 
-.carousel.owl-grab {
+.owl-carousel.owl-grab {
   cursor: move;
-  cursor: -webkit-grab;
-  cursor: -o-grab;
-  cursor: -ms-grab;
   cursor: grab;
 }
 
-.carousel.owl-rtl {
+.owl-carousel.owl-rtl {
   direction: rtl;
 }
 
-.carousel.owl-rtl .owl-item {
+.owl-carousel.owl-rtl .owl-item {
   float: right;
 }
 
 /* No Js */
-.no-js .carousel {
+.no-js .owl-carousel {
   display: block;
-}
-
-/*
- * 	Owl Carousel - Lazy Load Plugin
- */
-.carousel .owl-item .owl-lazy {
-  opacity: 0;
-  -webkit-transition: opacity 400ms ease;
-  -moz-transition: opacity 400ms ease;
-  -ms-transition: opacity 400ms ease;
-  -o-transition: opacity 400ms ease;
-  transition: opacity 400ms ease;
-}
-
-.carousel .owl-item img {
-  -webkit-transform-style: preserve-3d;
-  transform-style: preserve-3d;
 }
 
 /*
  *  Owl Carousel - Animate Plugin
  */
-.carousel .animated {
-  -webkit-animation-duration: 1000ms;
+.owl-carousel .animated {
   animation-duration: 1000ms;
-  -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
 
-.carousel .owl-animated-in {
+.owl-carousel .owl-animated-in {
   z-index: 0;
 }
 
-.carousel .owl-animated-out {
+.owl-carousel .owl-animated-out {
   z-index: 1;
 }
 
-.carousel .fadeOut {
-  -webkit-animation-name: fadeOut;
+.owl-carousel .fadeOut {
   animation-name: fadeOut;
-}
-
-@-webkit-keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
 }
 
 @keyframes fadeOut {
@@ -12460,11 +12456,30 @@ body {
  * 	Owl Carousel - Auto Height Plugin
  */
 .owl-height {
-  -webkit-transition: height 500ms ease-in-out;
-  -moz-transition: height 500ms ease-in-out;
-  -ms-transition: height 500ms ease-in-out;
-  -o-transition: height 500ms ease-in-out;
   transition: height 500ms ease-in-out;
+}
+
+/*
+ * 	Owl Carousel - Lazy Load Plugin
+ */
+.owl-carousel .owl-item {
+  /**
+			This is introduced due to a bug in IE11 where lazy loading combined with autoheight plugin causes a wrong
+			calculation of the height of the owl-item that breaks page layouts
+		 */
+}
+
+.owl-carousel .owl-item .owl-lazy {
+  opacity: 0;
+  transition: opacity 400ms ease;
+}
+
+.owl-carousel .owl-item .owl-lazy[src^=""], .owl-carousel .owl-item .owl-lazy:not([src]) {
+  max-height: 0;
+}
+
+.owl-carousel .owl-item img.owl-lazy {
+  transform-style: preserve-3d;
 }
 
 /*
@@ -12484,25 +12499,20 @@ body {
   top: 50%;
   margin-left: -40px;
   margin-top: -40px;
+  background: url("owl.video.play.png") no-repeat;
   cursor: pointer;
   z-index: 1;
   -webkit-backface-visibility: hidden;
-  -webkit-transition: scale 100ms ease;
-  -moz-transition: scale 100ms ease;
-  -ms-transition: scale 100ms ease;
-  -o-transition: scale 100ms ease;
-  transition: scale 100ms ease;
+  transition: transform 100ms ease;
 }
 
 .owl-carousel .owl-video-play-icon:hover {
-  -webkit-transition: scale(1.3, 1.3);
-  -moz-transition: scale(1.3, 1.3);
-  -ms-transition: scale(1.3, 1.3);
-  -o-transition: scale(1.3, 1.3);
-  transition: scale(1.3, 1.3);
+  -ms-transform: scale(1.3, 1.3);
+  transform: scale(1.3, 1.3);
 }
 
-.owl-carousel .owl-video-playing .owl-video-tn, .owl-carousel .owl-video-playing .owl-video-play-icon {
+.owl-carousel .owl-video-playing .owl-video-tn,
+.owl-carousel .owl-video-playing .owl-video-play-icon {
   display: none;
 }
 
@@ -12511,14 +12521,7 @@ body {
   height: 100%;
   background-position: center center;
   background-repeat: no-repeat;
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
-  -o-background-size: contain;
   background-size: contain;
-  -webkit-transition: opacity 400ms ease;
-  -moz-transition: opacity 400ms ease;
-  -ms-transition: opacity 400ms ease;
-  -o-transition: opacity 400ms ease;
   transition: opacity 400ms ease;
 }
 
@@ -17207,9 +17210,9 @@ fieldset[disabled] .btn-more {
 }
 
 .carousel .owl-nav [class*='owl-'] {
-  background: rgba(0, 0, 0, 0.4);
-  color: #fff;
-  font-size: 20px;
+  background: rgba(0, 0, 0, 0.4) !important;
+  color: #fff !important;
+  font-size: 20px !important;
   height: 35px;
   width: 35px;
   border-radius: 35px;
@@ -17746,6 +17749,14 @@ fieldset[disabled] .btn-more {
   display: inline-block;
   max-width: 100%;
   margin: 0 10px 10px 0;
+}
+
+.banner-control:focus, .banner-control .pause:focus, .banner-control .play:focus, .owl-dot:focus, .owl-prev:focus, .owl-next:focus {
+  outline: 1px dotted #000;
+}
+
+.owl-carousel:focus {
+  outline: none;
 }
 
 .plotly-chart .plotly-chart--loading {
