--- a/css/colorscheme-oceanside.css
+++ b/css/colorscheme-oceanside.css
@@ -1900,6 +1900,10 @@ figure {
   border-color: #FDB81E;
 }
 
+.carousel-video-submenu .owl-item.watching button {
+  border-color: #FDB81E;
+}
+
 /* -----------------------------------------
    COMMENT
    /source/scss/colorscheme/cs-buttons.scss
