--- a/source/scss/colorscheme/cs-carousel.scss
+++ b/source/scss/colorscheme/cs-carousel.scss
@@ -1,7 +1,11 @@
 .carousel-video-submenu {
     .owl-item.watching {
-      img {
-        border-color: $color-p1;
-      }
+        img {
+            border-color: $color-p1;
+        }
+
+        button {
+            border-color: $color-p1;
+        }
     }
-  }
+}
